# looloo-finance-ml

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md  build-brief.md  runbook.md  vendor-terms-review.md
docs/assets/: experimental-proof.md  looloo-project-evidence-rubric.md  paper-trading-reviewer-experience.md  project-direction-comparison.md  selected-project-contract.md  vibe-trading-audit.md
docs/sample-evidence/: evidence_report.md
evidence/: CANONICAL.json
evidence/4626e6cc69a2/: development_portfolio_comparison.csv  evidence_report.md  experiment_results.csv  fold_metrics.csv  paper_cost_sensitivity.csv  paper_model_comparison.csv  paper_skip_counts.csv  paper_weekly_returns.csv  predictive_robustness.csv  public_artifact_index.json  public_provenance.json  review_attestation.json
src/looloo_finance_ml/: __init__.py  calendar.py  cli.py  config.py  evaluation.py  evidence.py  features.py  fixtures.py  hashing.py  http.py  manifests.py  metrics.py  models.py  paper.py  schema.py  sources.py  validation.py  webull.py
tests/: test_cli.py  test_features.py  test_manifests_metrics.py  test_paper.py  test_sources_webull.py  test_timing_labels.py  test_validation_models.py  test_webull_signing.py
